<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartHome</string>
    <string name="menu_settings">Settings</string>
    <string name="text_aeration">Aeration</string>
    <string name="text_stop">Turned off</string>
    <string name="text_network_failed">Network error</string>
	<string name="text_level1">Level 1</string>
	<string name="text_level2">Level 2</string>
	<string name="text_level3">Level 3</string>
	<string name="text_set_level_success_prefix">The aeration level was set to </string>
	<string name="text_set_level_success_suffix">!</string>
	<string name="text_set_level_fail">No connection to aeration available, please prove your wifi settings.</string>
	
	<string name="text_power_control_garden">Garden</string>
	<string name="text_power_control_garden_no1">Power 1</string>
	<string name="text_power_control_garden_no2">Power 2</string>
	<string name="text_power_control_garden_no3">Power 3</string>
	
	<string name="settings_name">Settings</string>
	<string name="pref_api_url">API URL</string>
	<string name="pref_api_url_summ">Link to use for the api.</string>
	<string name="pref_api_url_default">http://example.com/smarthome/api.php</string>
</resources>